# InferX

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.en.md  README.md
app/: CMakeLists.txt  dataset_infer.cpp
config/: inferx_config.json  rt-detr.json  yolo_detection.json  yolo_obb.json  yolo_pose.json  yolo_segment.json
include/: inferx.hpp
include/common/: device_info.hpp  dllexport.hpp  infer_params.hpp  inferx_config.hpp  logger.hpp  model_param.hpp  param_parser.hpp  singleton.hpp  timer.hpp  to_json.hpp  utils.hpp  visualizer.hpp
include/infer_engine/: base_engine.hpp  engine_info.hpp  openvino_engine.hpp  tensorrt_engine.hpp
include/kernel_function/: kernel_function.hpp
src/: CMakeLists.txt  inferx.cpp
src/common/: device_info.cpp
src/infer_engine/: base_engine.cpp  openvino_engine.cpp  tensorrt_engine.cpp
src/kernel_function/: kernel_function.cu
tests/: CMakeLists.txt  test_rt-detr.cpp  test_yolo.cpp
tests/test_utils/: test_utils.hpp
tools/: onnx2openvino.ipynb  rtdetr_export.ipynb  yolo_export.ipynb
